# conclusion

./: .gitignore  AGENTS.md  COOKBOOK.md  README.md  pyproject.toml
app/: __init__.py  db.py  main.py  schemas.py
docs/: data-model.md  decision-models.md  fengdock-integration.md  mcp-contract.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: api.test.ts  api.ts  conclusionMarkdown.test.ts  conclusionMarkdown.ts  decisionModels.test.ts  decisionModels.ts  main.ts  markdown.test.ts  markdown.ts  router.ts  style.css  types.ts
frontend/src/components/: DecisionAnalysisView.vue  DecisionWorkbench.vue  MarkdownContent.vue  MarkdownField.vue
frontend/src/pages/: DecisionModelsPage.vue  DetailPage.vue  FormPage.vue  ListPage.vue
screenshots/: README.md
scripts/: capture_screenshots.py  seed_demo_data.py
tests/: test_create_conclusion.py  test_db.py  test_decision_models.py  test_delete_conclusion.py  test_frontend_fallback.py  test_health.py  test_read_conclusions.py  test_seed_demo_data.py  test_update_conclusion.py
