[project]
name = "conclusion"
version = "0.1.0"
description = "Personal decision knowledge base bundled with FengDock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.120.3",
    "uvicorn[standard]==0.38.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
